--- a/oflix/templates/backoffice/tv_show/new.html.twig
+++ b/oflix/templates/backoffice/tv_show/new.html.twig
@@ -1,6 +1,6 @@
 {% extends 'backoffice/layout.html.twig' %}
 
-{% block title %}New TvShow{% endblock %}
+{% block title %}Nouvelle série{% endblock %}
 
 {% block content %}
 
