Ajout des pages d'erreurs custom: bug entre env dev et prod

--- a/oflix/templates/backoffice/layout.html.twig
+++ b/oflix/templates/backoffice/layout.html.twig
@@ -12,8 +12,8 @@
             <a href="{{ path('backoffice')}}" class="btn btn-primary">Accueil</a>
             <a href="{{ path('backoffice_category_index')}}" class="btn btn-primary">Catégories</a>
             <a href="{{ path('backoffice_character_index')}}" class="btn btn-primary">Personnages</a>
-
-            <div class="btn-group" role="group">
+            <a href="{{ path('backoffice_tv_show_index')}}" class="btn btn-primary">Séries</a>
+            {# <div class="btn-group" role="group">
                 <a id="btnGroupDrop1" href="" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
                     Séries
                 </a>
@@ -29,7 +29,7 @@
                     </li>
 
                 </ul>
-            </div>
+            </div> #}
         </div>
     </div>
 
