--- a/oflix/templates/backoffice/season/new.html.twig
+++ b/oflix/templates/backoffice/season/new.html.twig
@@ -7,5 +7,5 @@
 
     {{ include('backoffice/season/_form.html.twig') }}
 
-    <a class="btn btn-primary" href="{{ path('backoffice_season_index') }}">Revenir à la liste</a>
+    {# <a class="btn btn-primary" href="{{ path('backoffice_season_index') }}">Revenir à la liste</a> #}
 {% endblock %}
