--- a/oflix/templates/backoffice/episode/new.html.twig
+++ b/oflix/templates/backoffice/episode/new.html.twig
@@ -1,11 +1,22 @@
-{% extends 'backoffice/layout.html.twig' %}
+{% extends "backoffice/layout.html.twig" %}
 
-{% block title %}Ajouter un épisode{% endblock %}
+{% block title %}
+    Nouvel épisode |
+    {{parent()}}
+{% endblock %}
 
 {% block content %}
-    <h1>Ajouter un épisode</h1>
+    <h2>
+        Nouvel épisode -
+        {{ season.tvShow.title }}
+        - Saison
+        {{ season.seasonNumber }}
+    </h2>
+    {{form_start(form)}}
+    {{form_row(form.episodeNumber)}}
+    {{form_row(form.title)}}
+    {{form_row(form.publishedAt)}}
+    <button class="btn btn-primary">Valider</button>
+    {{form_end(form)}}
 
-    {{ include('backoffice/episode/_form.html.twig') }}
-
-    <a class="btn btn-primary" href="{{ path('backoffice_episode_index') }}">Retour à la liste</a>
 {% endblock %}
