--- a/oflix/templates/backoffice/season/index.html.twig
+++ b/oflix/templates/backoffice/season/index.html.twig
@@ -1,42 +1,29 @@
 {% extends 'backoffice/layout.html.twig' %}
 
-{% block title %}Index saisons - {{ parent() }}{% endblock %}
+{% block title %}Index saison - {{ parent() }}{% endblock %}
 
 {% block content %}
-    <h1>Liste des saisons</h1>
+    <h2>{{ tvShow.title }}</h2>
 
-    <p><a class="btn btn-primary" href="{{ path('backoffice_season_add')}}">Ajouter une saison</a></p>
+    <h3>Saisons</h3>
+    <p>
+        <a href="{{ path('backoffice_season_add', {id:tvShow.id}) }}">Ajouter une saison</a>
+    </p>
+    <ul>
+        {% for season in tvShow.seasons %}
+            <li>
+                Saison
+                {{ season.seasonNumber }}
+                -
+                <a href="{{ path('backoffice_episode_add', {id:season.id}) }}">Ajouter un épisode</a>
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>SeasonNumber</th>
-                <th>PublishedAt</th>
-                <th>CreatedAt</th>
-                <th>UpdatedAt</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for season in seasons %}
-            <tr>
-                <td>{{ season.id }}</td>
-                <td>{{ season.seasonNumber }}</td>
-                <td>{{ season.publishedAt ? season.publishedAt|date('d-m-Y H:i:s') : '' }}</td>
-                <td>{{ season.createdAt ? season.createdAt|date('d-m-Y H:i:s') : '' }}</td>
-                <td>{{ season.updatedAt ? season.updatedAt|date('d-m-Y H:i:s') : '' }}</td>
-                <td>
-                    <a href="{{ path('backoffice_season_show', {'id': season.id}) }}">show</a>
-                    <a href="{{ path('backoffice_season_edit', {'id': season.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="6">no records found</td>
-            </tr>
+                <ul>
+                    {% for episode in season.episodes %}
+                        <li>{{ episode.title }}</li>
+                    {% endfor %}
+                </ul>
+            </li>
         {% endfor %}
-        </tbody>
-    </table>
-
+    </ul>
 {% endblock %}
+
