--- a/oflix/templates/backoffice/tv_show/edit.html.twig
+++ b/oflix/templates/backoffice/tv_show/edit.html.twig
@@ -5,7 +5,11 @@
 {% block content %}
 
     <h1>Editer TvShow</h1>
+    <p>
+        <a href="{{ path('backoffice_season_index', {id:tv_show.id}) }}">Toutes le saisons</a>
 
+        <a href="{{ path('backoffice_season_add', {id: tv_show.id})}}">Ajouter une saison</a>
+    </p>
     <p>{{ include('backoffice/tv_show/_form.html.twig', {'button_label': 'Valider'}) }}</p>
 
     <p>{{ include('backoffice/tv_show/_delete_form.html.twig') }}</p>
