bug dans le nom de la route home

--- a/oflix/templates/bundles/TwigBundle/Exception/error404.html.twig
+++ b/oflix/templates/bundles/TwigBundle/Exception/error404.html.twig
@@ -8,6 +8,6 @@
         <img src="https://www.darty.com/darty-et-vous/sites/default/files/thumbnails/image/cassettes-vhs_0.jpg" alt="Video cassette">
     </p>
 
-    <a href="{{ path('home') }}">Retour à l'accueil</a>
+    <a href="{{ path('index') }}">Retour à l'accueil</a>
 
 {% endblock %}
