Ajout de tests fonctionnels pour la page d'accueil

--- a/oflix/templates/home/index.html.twig
+++ b/oflix/templates/home/index.html.twig
@@ -13,7 +13,7 @@
                 <div class="col-lg-6 col-md-8 mx-auto">
                     <h1 class="fw-light">Séries TV et bien plus en illimité.</h1>
                     <p class="lead text-muted">Où que vous soyez. Annulez à tout moment.</p>
-                    <p>
+                    <p class="welcome_user">
                     {% if app.user %}
                         Bienvenue {{ app.user.email}}
                     {% else %}
