--- a/oflix/templates/partials/_flash.html.twig
+++ b/oflix/templates/partials/_flash.html.twig
@@ -1,6 +1,6 @@
 {% for label, messages in app.flashes %}
     {% for message in messages %}
-        <div class="alert alert-{{ label }}">
+        <div class="text-center alert alert-{{ label }}">
             {{ message }}
         </div>
     {% endfor %}
